--- a/404.html
+++ b/404.html
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-    <h1>ERROR: 404</h1>
-    <p>PAGE NOT FOUND</p>
+    <h1>404: PAGE NOT FOUND</h1>
+    <p>You've typed something wrong</p>
 </body>
 
 </html>
